Praise the Checkstyle gods